Added new end point getAvgFlightInTime
