# static/swagger.json
@@ -379,6 +379,28 @@
           }
         }
       }
+    },
+    "/getAvgFlightInTime": {
+      "get": {
+        "tags": [
+          "Get all sales orders details data api"
+        ],
+        "summary": "Get all sales orders details data api",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/seasonilityResponse"
+            }
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "schema": {
+              "$ref": "#/components/schemas/seasonilityResponse"
+            }
+          }
+        }
+      }
     }
   }
 }
